--- a/time-expr/Cargo.toml
+++ b/time-expr/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.26"
 thiserror = "1.0.40"
-time = { version = "0.3.21", features = ["macros"] }
+time = "0.3.21"
