--- a/flumox-server/Cargo.toml
+++ b/flumox-server/Cargo.toml
@@ -5,10 +5,12 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
+axum = "0.6.18"
 flumox = { path = "../flumox" }
 indexmap = "1.9.3"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.96"
+thiserror = "1.0.40"
 time = { version = "0.3.22", features = ["serde", "macros"] }
 time-expr = { path = "../time-expr" }
 tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
