--- a/flumox/Cargo.toml
+++ b/flumox/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 indexmap = "1.9.3"
 serde = { version = "1.0.164", features = ["derive"] }
+thiserror = "1.0.40"
 time = { version = "0.3.22", features = ["serde"] }
 time-expr = { path = "../time-expr" }
