--- a/flumox-server/Cargo.toml
+++ b/flumox-server/Cargo.toml
@@ -19,5 +19,6 @@ tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
 tokio-postgres = { version = "0.7.8", features = [
     "with-time-0_3",
     "with-serde_json-1",
+    "with-uuid-1",
 ] }
 uuid = { version = "1.3.3", features = ["v7"] }
