--- a/flumox/Cargo.toml
+++ b/flumox/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 indexmap = "1.9.3"
 serde = { version = "1.0.164", features = ["derive"] }
 thiserror = "1.0.40"
-time = { version = "0.3.22", features = ["serde"] }
+time = { version = "0.3.22", features = ["serde", "formatting", "parsing"] }
 time-expr = { path = "../time-expr" }
