--- a/flumox-server/Cargo.toml
+++ b/flumox-server/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 anyhow = "1.0.71"
 async-trait = "0.1.68"
 axum = "0.6.18"
+base64 = "0.21.2"
 deadpool-postgres = "0.10.5"
 flumox = { path = "../flumox" }
+getrandom = "0.2.10"
 indexmap = "1.9.3"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.96"
@@ -16,9 +18,5 @@ thiserror = "1.0.40"
 time = { version = "0.3.22", features = ["serde", "macros"] }
 time-expr = { path = "../time-expr" }
 tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
-tokio-postgres = { version = "0.7.8", features = [
-    "with-time-0_3",
-    "with-serde_json-1",
-    "with-uuid-1",
-] }
-uuid = { version = "1.3.3", features = ["v7"] }
+tokio-postgres = { version = "0.7.8", features = ["with-time-0_3", "with-serde_json-1", "with-uuid-1", "array-impls"] }
+uuid = { version = "1.3.3", features = ["v4", "serde"] }
