--- a/flumox-server/Cargo.toml
+++ b/flumox-server/Cargo.toml
@@ -6,11 +6,12 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 async-trait = "0.1.68"
-axum = "0.6.18"
+axum = { version = "0.6.18", features = ["headers"] }
 base64 = "0.21.2"
 deadpool-postgres = "0.10.5"
 flumox = { path = "../flumox" }
 getrandom = "0.2.10"
+headers = "0.3.8"
 indexmap = "1.9.3"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.96"
