--- a/flumox-server/Cargo.toml
+++ b/flumox-server/Cargo.toml
@@ -19,5 +19,13 @@ thiserror = "1.0.40"
 time = { version = "0.3.22", features = ["serde", "macros"] }
 time-expr = { path = "../time-expr" }
 tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
-tokio-postgres = { version = "0.7.8", features = ["with-time-0_3", "with-serde_json-1", "with-uuid-1", "array-impls"] }
+tokio-postgres = { version = "0.7.8", features = [
+    "with-time-0_3",
+    "with-serde_json-1",
+    "with-uuid-1",
+    "array-impls",
+] }
+tower-http = { version = "0.4.0", features = ["trace"] }
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
 uuid = { version = "1.3.3", features = ["v4", "serde"] }
