--- a/flumox-server/Cargo.toml
+++ b/flumox-server/Cargo.toml
@@ -25,7 +25,13 @@ tokio-postgres = { version = "0.7.8", features = [
     "with-uuid-1",
     "array-impls",
 ] }
-tower-http = { version = "0.4.0", features = ["trace"] }
+tower-http = { version = "0.4.0", features = [
+    "trace",
+    "sensitive-headers",
+    "compression-deflate",
+    "compression-gzip",
+    "compression-br",
+] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 uuid = { version = "1.3.3", features = ["v4", "serde"] }
