Add caching and security headers for API

--- a/flumox-server/Cargo.toml
+++ b/flumox-server/Cargo.toml
@@ -12,6 +12,7 @@ deadpool-postgres = "0.10.5"
 flumox = { path = "../flumox" }
 getrandom = "0.2.10"
 headers = "0.3.8"
+http = "0.2.9"
 indexmap = "1.9.3"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.96"
@@ -31,6 +32,7 @@ tower-http = { version = "0.4.0", features = [
     "compression-deflate",
     "compression-gzip",
     "compression-br",
+    "set-header",
 ] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
