--- a/flumox/Cargo.toml
+++ b/flumox/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+digest = "0.10.7"
+fingerprint-struct = "0.1.0"
 indexmap = "1.9.3"
 serde = { version = "1.0.164", features = ["derive"] }
 thiserror = "1.0.40"
