--- a/flumox/Cargo.toml
+++ b/flumox/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0.164", features = ["derive"] }
 thiserror = "1.0.40"
 time = { version = "0.3.22", features = ["serde", "formatting", "parsing"] }
 time-expr = { path = "../time-expr" }
+unicode-normalization = "0.1.22"
