--- a/flumox-server/Cargo.toml
+++ b/flumox-server/Cargo.toml
@@ -21,7 +21,12 @@ serde_json = "1.0.99"
 thiserror = "1.0.40"
 time = { version = "0.3.22", features = ["serde", "macros"] }
 time-expr = { path = "../time-expr" }
-tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.28.2", features = [
+    "macros",
+    "rt-multi-thread",
+    "sync",
+    "parking_lot",
+] }
 tokio-postgres = { version = "0.7.8", features = [
     "with-time-0_3",
     "with-serde_json-1",
