Implement message listener

--- a/flumox-server/Cargo.toml
+++ b/flumox-server/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 async-trait = "0.1.68"
-axum = { version = "0.6.18", features = ["headers"] }
+axum = { version = "0.6.18", features = ["headers", "macros"] }
 base64 = "0.21.2"
 blake2 = "0.10.6"
+channel-map = { path = "../channel-map" }
 clap = { version = "4.3.8", features = ["derive", "env"] }
 deadpool-postgres = "0.10.5"
 fingerprint-struct = "0.1.0"
