Implement sync websocket

--- a/flumox-server/Cargo.toml
+++ b/flumox-server/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 async-trait = "0.1.68"
-axum = { version = "0.6.18", features = ["headers", "macros"] }
+axum = { version = "0.6.18", features = ["headers", "macros", "ws"] }
 base64 = "0.21.2"
 blake2 = "0.10.6"
 channel-map = { path = "../channel-map" }
@@ -14,6 +14,7 @@ clap = { version = "4.3.8", features = ["derive", "env"] }
 deadpool-postgres = "0.10.5"
 fingerprint-struct = "0.1.0"
 flumox = { path = "../flumox" }
+futures = "0.3.28"
 getrandom = "0.2.10"
 http = "0.2.9"
 indexmap = "2.0.0"
