--- a/flumox-client/package.json
+++ b/flumox-client/package.json
@@ -13,11 +13,13 @@
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@tsconfig/svelte": "^4.0.1",
     "@types/html-minifier-terser": "^7.0.0",
+    "@types/node": "^20.3.2",
     "html-minifier-terser": "^7.2.0",
     "svelte": "^4.0.0",
     "svelte-check": "^3.4.4",
     "tslib": "^2.5.0",
     "typescript": "^5.1.3",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "yaml": "^2.3.1"
   }
 }
