--- a/flumox-client/tsconfig.node.json
+++ b/flumox-client/tsconfig.node.json
@@ -3,7 +3,8 @@
     "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "bundler"
+    "moduleResolution": "bundler",
+    "lib": ["ES2015"]
   },
   "include": ["vite.config.ts"]
 }
