--- a/flumox-client/package.json
+++ b/flumox-client/package.json
@@ -20,6 +20,7 @@
     "tslib": "^2.5.0",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
+    "vite-plugin-pwa": "^0.16.4",
     "yaml": "^2.3.1"
   }
 }
