--- a/flumox-server/Cargo.toml
+++ b/flumox-server/Cargo.toml
@@ -45,5 +45,5 @@ tower-http = { version = "0.4.1", features = [
     "set-header",
 ] }
 tracing = "0.1.37"
-tracing-subscriber = "0.3.17"
+tracing-subscriber = { version = "0.3.17", features = ["parking_lot"] }
 uuid = { version = "1.3.4", features = ["v4", "serde"] }
