Implement simple game tracker for admins

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["flumox", "flumox-server", "time-expr", "channel-map"]
+members = ["flumox", "flumox-server", "flumox-game-tracker", "time-expr", "channel-map"]
 
 [profile.release]
 lto = "fat"
