--- a/flumox-game-tracker/Cargo.toml
+++ b/flumox-game-tracker/Cargo.toml
@@ -11,6 +11,7 @@ deadpool-postgres = "0.10.5"
 flumox = { path = "../flumox" }
 maud = { version = "0.25.0", features = ["axum"] }
 serde = { version = "1.0.171", features = ["derive"] }
+time = "0.3.23"
 tokio = { version = "1.29.1", features = [
     "macros",
     "rt-multi-thread",
