--- a/flumox-seed-maker/Cargo.toml
+++ b/flumox-seed-maker/Cargo.toml
@@ -10,4 +10,4 @@ json5 = "0.4.1"
 postgres-protocol = "0.6.5"
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.103"
-uuid = { version = "1.4.1", features = ["v4"] }
+uuid = { version = "1.4.1", features = ["v4", "serde"] }
