--- a/flumox-game-tracker/Cargo.toml
+++ b/flumox-game-tracker/Cargo.toml
@@ -22,7 +22,15 @@ tokio-postgres = { version = "0.7.8", features = [
     "with-serde_json-1",
     "with-uuid-1",
 ] }
-tower-http = { version = "0.4.1", features = ["trace", "set-header", "compression-deflate", "compression-gzip", "compression-br", "validate-request", "auth"] }
+tower-http = { version = "0.4.1", features = [
+    "trace",
+    "set-header",
+    "compression-deflate",
+    "compression-gzip",
+    "compression-br",
+    "validate-request",
+    "auth",
+] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["parking_lot"] }
 uuid = { version = "1.4.0", features = ["serde"] }
