--- a/flumox-server/Cargo.toml
+++ b/flumox-server/Cargo.toml
@@ -12,6 +12,7 @@ base64 = "0.21.2"
 channel-map = { path = "../channel-map" }
 clap = { version = "4.3.8", features = ["derive", "env"] }
 deadpool-postgres = "0.10.5"
+flate2 = "1.0.26"
 flumox = { path = "../flumox" }
 futures = "0.3.28"
 getrandom = "0.2.10"
