--- a/flumox-game-tracker/Cargo.toml
+++ b/flumox-game-tracker/Cargo.toml
@@ -5,11 +5,11 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.72"
-axum = { version = "0.6.19", features = ["headers", "macros"] }
+axum = { version = "0.7.5", features = ["macros"] }
 clap = { version = "4.3.19", features = ["derive", "env"] }
 deadpool-postgres = "0.10.5"
 flumox = { path = "../flumox" }
-maud = { version = "0.25.0", features = ["axum"] }
+maud = { version = "0.26.0", features = ["axum"] }
 serde = { version = "1.0.174", features = ["derive"] }
 time = "0.3.23"
 tokio = { version = "1.29.1", features = [
@@ -22,7 +22,7 @@ tokio-postgres = { version = "0.7.8", features = [
     "with-serde_json-1",
     "with-uuid-1",
 ] }
-tower-http = { version = "0.4.3", features = [
+tower-http = { version = "0.5.2", features = [
     "trace",
     "set-header",
     "compression-deflate",
