Add zstd compression support

--- a/flumox-game-tracker/Cargo.toml
+++ b/flumox-game-tracker/Cargo.toml
@@ -28,6 +28,7 @@ tower-http = { version = "0.5.2", features = [
     "compression-deflate",
     "compression-gzip",
     "compression-br",
+    "compression-zstd",
     "validate-request",
     "auth",
 ] }
