--- a/flumox-server/Cargo.toml
+++ b/flumox-server/Cargo.toml
@@ -42,6 +42,7 @@ tower-http = { version = "0.5.2", features = [
     "compression-deflate",
     "compression-gzip",
     "compression-br",
+    "compression-zstd",
     "set-header",
 ] }
 tracing = "0.1.37"
